fix overflow

--- a/client/src/components/Comments/comment.scss
+++ b/client/src/components/Comments/comment.scss
@@ -17,8 +17,8 @@
 
 .overflow {
   overflow: hidden;
-  overflow-y: scroll;
-  max-height: 500px;
+  overflow-y: auto;
+  max-height: 100%;
 }
 
 .format {
